--- a/index.html
+++ b/index.html
@@ -1750,7 +1750,7 @@ function loadHeroVideo() {
     const video = document.createElement('video');
 
     // Set video source to local GitHub asset
-    video.src = './assets/videos/IdeaRoute Films (Show Reel).mp4';
+    video.src = './assets/videos/IdeaRoute-Films-Show-Reel.mp4';
     video.type = 'video/mp4';
 
     // Video settings
